--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -43,6 +43,24 @@
       background: url('../image/calc-buttons.png') -46px 0px no-repeat;
     }
   }
+  &__tariforder{
+    width: 158px;
+    height: 33px;
+    padding: 15px 0px 0px 56px;
+    background-color: #3498db;
+    margin: 45px auto 0px auto;
+    position: relative;
+    &:before{
+      content: " ";
+      display: block;
+      position: absolute;
+      left: 23px;
+      top: 11px;
+      width: 23px;
+      height: 23px;
+      background: url('../image/calc-buttons.png') -46px 0px no-repeat;
+    }
+  }
 	&__phone{
 		background-color: #e74c3c;
 		width: 167px;
