--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -58,3 +58,15 @@
     font-style: normal;
 
 }
+@font-face {
+    font-family: 'proximanova_bold_italic';
+    src: url('fonts/proximanova-boldit.eot');
+    src: url('fonts/proximanova-boldit.eot?#iefix') format('embedded-opentype'),
+         url('fonts/proximanova-boldit.woff2') format('woff2'),
+         url('fonts/proximanova-boldit.woff') format('woff'),
+         url('fonts/proximanova-boldit.ttf') format('truetype'),
+         url('fonts/proximanova-boldit.svg#proximanova_bold_italic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
