--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -124,6 +124,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'proximanova_light_italic';
+  src: url("fonts/proximanova-lightit.eot");
+  src: url("fonts/proximanova-lightit.eot?#iefix") format("embedded-opentype"), url("fonts/proximanova-lightit.woff2") format("woff2"), url("fonts/proximanova-lightit.woff") format("woff"), url("fonts/proximanova-lightit.ttf") format("truetype"), url("fonts/proximanova-lightit.svg#proximanova_light_italic") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 #offset {
   position: fixed;
   right: 100px;
@@ -650,12 +657,30 @@ textarea:focus {
   height: 23px;
   background: url("../image/calc-buttons.png") -46px 0px no-repeat;
 }
-.button__tariforder {
+.button__tarifsorder {
   width: 158px;
   height: 33px;
   padding: 15px 0px 0px 56px;
   background-color: #3498db;
   margin: 45px auto 0px auto;
+  position: relative;
+}
+.button__tarifsorder:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 23px;
+  top: 11px;
+  width: 23px;
+  height: 23px;
+  background: url("../image/calc-buttons.png") -46px 0px no-repeat;
+}
+.button__tariforder {
+  width: 158px;
+  height: 33px;
+  padding: 15px 0px 0px 56px;
+  background-color: #e74c3c;
+  float: left;
   position: relative;
 }
 .button__tariforder:before {
@@ -3145,7 +3170,7 @@ textarea:focus {
   line-height: 1.1;
   padding: 46px 0px 37px 0px;
   float: right;
-  width: 230px;
+  width: 240px;
 }
 .block-form_inner {
   padding: 0px 0px 11px 0px;
@@ -3708,6 +3733,270 @@ textarea:focus {
 }
 .tarif-block_link:hover {
   text-decoration: underline;
+}
+
+.tarif {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  * zoom: 1;
+  display: block;
+  padding: 0px 0px 72px 0px;
+}
+.tarif:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+* html .tarif {
+  height: 1%;
+}
+.tarif_image {
+  float: left;
+  margin: 0px 20px 0px 0px;
+}
+.tarif ul {
+  padding: 0px 0px 0px 15px;
+  list-style-image: url("../image/list.png");
+  list-style-type: disc;
+}
+.tarif li {
+  font-family: proximanova_light;
+  font-size: 16px;
+  color: #373737;
+  margin: 0px 0px 28px 0px;
+  padding: 0px 0px 0px 17px;
+}
+.tarif_link {
+  padding: 16px 0px 0px 50px;
+  margin: 0px 0px 0px 64px;
+  display: block;
+  float: left;
+  width: 347px;
+  height: 32px;
+  background: url("../image/link-calc.png") 19px 15px no-repeat #3498db;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 16px;
+}
+.tarif_link:visited {
+  color: #ffffff;
+}
+.tarif_link:hover {
+  color: #ffffff;
+}
+.tarif_link:active {
+  color: #ffffff;
+}
+.tarif_link:focus {
+  color: #ffffff;
+}
+.tarif_body {
+  padding: 0px 0px 12px 0px;
+}
+
+.price {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  * zoom: 1;
+  display: block;
+}
+.price:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+* html .price {
+  height: 1%;
+}
+.price_title {
+  font-family: proximanova_bold;
+  font-size: 18px;
+  color: #373737;
+  text-transform: uppercase;
+  position: relative;
+  margin: 0px 0px 31px 0px;
+}
+.price_title:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 1px;
+  top: -17px;
+  width: 40px;
+  height: 3px;
+  background-color: #3498db;
+}
+.price_descr {
+  padding: 0px 0px 41px 0px;
+}
+.price_table table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid white;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤А╨░╨╝╨║╤Г ╨▓╨╛╨║╤А╤Г╨│ ╤В╨░╨▒╨╗╨╕╤Ж╤Л */
+  margin: 0px;
+  padding: 0px;
+}
+.price_table th {
+  text-align: center;
+  /* ╨Т╤Л╤А╨░╨▓╨╜╨╕╨▓╨░╨╜╨╕╨╡ ╨┐╨╛ ╨╗╨╡╨▓╨╛╨╝╤Г ╨║╤А╨░╤О */
+  vertical-align: middle;
+  background-color: #606060;
+  border: 1px solid #c8c8c8;
+  text-align: center;
+  padding: 31px;
+  font-family: proximanova_bold;
+  font-size: 20px;
+  color: #f7f5f5;
+}
+.price_table td {
+  vertical-align: middle;
+  background-color: #ededed;
+  border: 1px solid #c8c8c8;
+  text-align: center;
+  padding: 11px 23px 11px 23px;
+  min-width: 67px;
+  font-family: proximanova_light;
+  font-size: 16px;
+  color: #606060;
+}
+.price_table td:first-child {
+  text-align: left;
+}
+.price_table td:nth-child(2n) {
+  font-family: proximanova_light_italic;
+  font-size: 14px;
+}
+.price_price {
+  width: 179px;
+}
+.price_link {
+  margin: 35px 0px 0px 0px;
+  padding: 16px 0px 0px 50px;
+  display: block;
+  float: right;
+  width: 297px;
+  height: 32px;
+  background: url("../image/link-calc.png") 19px 15px no-repeat #3498db;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 16px;
+}
+.price_link:visited {
+  color: #ffffff;
+}
+.price_link:hover {
+  color: #ffffff;
+}
+.price_link:active {
+  color: #ffffff;
+}
+.price_link:focus {
+  color: #ffffff;
+}
+
+.tarifs-block {
+  display: inline-block;
+  /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
+  * zoom: 1;
+  display: block;
+  padding: 68px 0px 33px 0px;
+}
+.tarifs-block:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  font-size: 0;
+  line-height: 0;
+  visibility: hidden;
+}
+* html .tarifs-block {
+  height: 1%;
+}
+.tarifs-block_title {
+  font-family: proximanova_bold;
+  font-size: 18px;
+  color: #373737;
+  text-transform: uppercase;
+  margin: 0px 0px 32px 0px;
+  position: relative;
+}
+.tarifs-block_title:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 1px;
+  top: -17px;
+  width: 40px;
+  height: 3px;
+  background-color: #3498db;
+}
+.tarifs-block_item {
+  float: left;
+  width: 480px;
+}
+.tarifs-block_link {
+  font-size: 16px;
+  text-transform: uppercase;
+  color: #373737;
+  text-decoration: none;
+  display: block;
+  padding: 0px 0px 0px 28px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  margin: 0px 0px 26px 0px;
+}
+.tarifs-block_link:visited {
+  color: #373737;
+}
+.tarifs-block_link:hover {
+  color: #3498db;
+}
+.tarifs-block_link:active {
+  color: #373737;
+}
+.tarifs-block_link:focus {
+  color: #373737;
+}
+.tarifs-block_link:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 2px;
+  width: 10px;
+  height: 11px;
+  background: url("../image/arrow-next.png") no-repeat;
+}
+.tarifs-block_link:hover {
+  padding: 0px 0px 0px 49px;
+}
+.tarifs-block_link:hover:before {
+  background-position: -10px 0px;
+}
+
+.b-note {
+  padding: 20px 0px 59px 0px;
+}
+.b-note p {
+  font-family: proximanova_light;
+  color: #606060;
+  font-size: 14px;
 }
 
 .footer {
