--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -70,3 +70,15 @@
     font-style: normal;
 
 }
+@font-face {
+    font-family: 'proximanova_light_italic';
+    src: url('fonts/proximanova-lightit.eot');
+    src: url('fonts/proximanova-lightit.eot?#iefix') format('embedded-opentype'),
+         url('fonts/proximanova-lightit.woff2') format('woff2'),
+         url('fonts/proximanova-lightit.woff') format('woff'),
+         url('fonts/proximanova-lightit.ttf') format('truetype'),
+         url('fonts/proximanova-lightit.svg#proximanova_light_italic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
