--- a/sass/_menutop.scss
+++ b/sass/_menutop.scss
@@ -1,4 +1,4 @@
-.topmenu{
+.menutop{
   background-color: #19254b;
   min-width: 1000px;
   &_inner{
@@ -52,7 +52,7 @@
       }
     }
     &:hover{
-      .topmenu_wrap{
+      .menutop_wrap{
         visibility: visible;
         max-height: 200px;
         padding: 27px 0px 45px 0px;
@@ -61,10 +61,10 @@
           display: block;
         }
       }
-      .topmenu_link{
+      .menutop_link{
       	border-top: 3px solid #3498db;
       }
-      & .topmenu_link:before, & .before{
+      & .menutop_link:before, & .before{
         visibility: visible;
       }
     }
