--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,6 +4,23 @@
   }
   &_wrap{
     @include clearfix();
+    position: relative;
+  }
+  &_up{
+    position: absolute;
+    top: 9px;
+    right: 128px;
+    display: block;
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 49px;
+    height: 49px;
+    background: url('../image/up.jpg') no-repeat;
+    @include def-opacity(0.5);
+    &:hover{
+      @include def-opacity(1);
+    }
   }
   &_section{
     float: left;
