--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -1058,6 +1058,9 @@ textarea:focus {
   right: 0px;
   z-index: 2;
 }
+.form-discount .messages {
+  display: none;
+}
 .form-discount_wrap {
   position: relative;
   z-index: 2;
@@ -1081,12 +1084,21 @@ textarea:focus {
   color: #373737;
   font-size: 24px;
 }
+.form-discount_title p {
+  text-align: center;
+  color: #373737;
+  font-size: 24px;
+}
 .form-discount_title span {
   display: block;
   text-align: center;
   color: #373737;
   font-size: 56px;
   padding: 4px 0px 10px 0px;
+}
+.form-discount_confirmation {
+  padding: 0px 22px 0px 22px;
+  text-align: center;
 }
 .form-discount_inner {
   padding: 0px 0px 18px 0px;
@@ -1099,8 +1111,14 @@ textarea:focus {
   margin: 0px;
   padding: 0px 16px 0px 16px;
 }
+.form-discount_inner .error {
+  -webkit-box-shadow: inset 0px 0px 0px 1px red;
+  -moz-box-shadow: inset 0px 0px 0px 1px red;
+  box-shadow: inset 0px 0px 0px 1px red;
+}
 .form-discount_button {
   padding: 9px 0px 0px 0px;
+  position: relative;
 }
 .form-discount_button input {
   width: 231px;
@@ -1125,11 +1143,39 @@ textarea:focus {
 .form-discount_button input:hover {
   cursor: pointer;
 }
+.form-discount_button .ajax-progress {
+  position: absolute;
+  top: 29px;
+  right: 25px;
+}
+.form-discount_button .ajax-progress .throbber {
+  background: transparent url("../image/loader-ajax-blue.gif") no-repeat 0px 0px;
+  /* tweak this according to your gif */
+  float: left;
+  height: 16px;
+  /* tweak this according to your gif */
+  width: 16px;
+  /* tweak this according to your gif */
+  margin: 0px;
+}
 .form-discount_descr {
   font-family: proximanova_light;
   color: #666666;
   font-size: 14px;
   padding: 15px 0px 0px 0px;
+  line-height: 1.2;
+}
+.form-discount_descr p {
+  font-family: proximanova_light;
+  color: #666666;
+  font-size: 14px;
+  padding: 15px 0px 0px 0px;
+  line-height: 1.2;
+}
+.form-discount_confirmation p {
+  padding: 80px 0px 0px 0px;
+  color: #666666;
+  font-size: 16px;
   line-height: 1.2;
 }
 
@@ -1170,6 +1216,9 @@ textarea:focus {
   /*input[type="checkbox"]:checked + label {
     border-color: #3498db;
   }*/
+}
+.form-popup .messages {
+  display: none;
 }
 .form-popup_wrap__question {
   width: 284px;
@@ -1217,6 +1266,10 @@ textarea:focus {
   height: 3px;
   background-color: #19254b;
 }
+.form-popup_confirmation {
+  padding: 0px 22px 0px 22px;
+  text-align: center;
+}
 .form-popup_inner {
   padding: 0px 0px 17px 0px;
   text-align: center;
@@ -1229,6 +1282,9 @@ textarea:focus {
   margin: 0px;
   padding: 0px 22px 0px 22px;
 }
+.form-popup_inner .error {
+  border: 1px solid #ff0000;
+}
 .form-popup_inner textarea {
   font-size: 16px;
   width: 199px;
@@ -1240,6 +1296,7 @@ textarea:focus {
 .form-popup_button {
   padding: 9px 0px 0px 0px;
   text-align: center;
+  position: relative;
 }
 .form-popup_button input {
   width: 245px;
@@ -1264,7 +1321,30 @@ textarea:focus {
 .form-popup_button input:hover {
   cursor: pointer;
 }
+.form-popup_button .ajax-progress {
+  position: absolute;
+  top: 29px;
+  right: 25px;
+}
+.form-popup_button .ajax-progress .throbber {
+  background: transparent url("../image/loader-ajax-red.gif") no-repeat 0px 0px;
+  /* tweak this according to your gif */
+  float: left;
+  height: 16px;
+  /* tweak this according to your gif */
+  width: 16px;
+  /* tweak this according to your gif */
+  margin: 0px;
+}
 .form-popup_descr {
+  font-family: proximanova_light;
+  color: #666666;
+  font-size: 14px;
+  text-align: center;
+  padding: 15px 20px 30px 20px;
+  line-height: 1.2;
+}
+.form-popup_descr p {
   font-family: proximanova_light;
   color: #666666;
   font-size: 14px;
@@ -4011,6 +4091,7 @@ textarea:focus {
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
   * zoom: 1;
   display: block;
+  position: relative;
 }
 .footer_wrap:after {
   clear: both;
@@ -4023,6 +4104,28 @@ textarea:focus {
 }
 * html .footer_wrap {
   height: 1%;
+}
+.footer_up {
+  position: absolute;
+  top: 9px;
+  right: 128px;
+  display: block;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 49px;
+  height: 49px;
+  background: url("../image/up.jpg") no-repeat;
+  -webkit-opacity: 0.5;
+  -moz-opacity: 0.5;
+  opacity: 0.5;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+}
+.footer_up:hover {
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
 }
 .footer_section {
   float: left;
