--- a/sass/_block-form.scss
+++ b/sass/_block-form.scss
@@ -1,4 +1,15 @@
 .block-form{
+  .messages{
+    display: none;
+  }
+  &_confirmation{
+    padding: 155px 50px 0px 50px;
+    p{
+      text-align: center;
+      color: #ffffff;
+      font-size: 26px;
+    }
+  }
   height: 360px;
   position: relative; 
   overflow: hidden;
@@ -27,7 +38,7 @@
       background-color: #ffffff;
     }
   }
-  &_layer{
+  &_bac{
     width: 100%;
     height: 100%;
     background: url('../image/big-2120-1410.jpg') no-repeat;
@@ -79,6 +90,7 @@
       padding: 0px 22px 0px 22px;
     }
     textarea{
+      box-sizing: content-box;
       font-size: 16px;
       width: 629px;
       height: 164px;
@@ -86,9 +98,13 @@
       margin: 0px;
       padding: 11px 22px 0px 22px;
     }
+    .error{
+      border: 1px solid #ff0000;
+    }
   }
   &_button{
     padding: 9px 0px 0px 0px;
+    position: relative;
     input{
       width: 230px;
       height: 54px;
@@ -101,6 +117,20 @@
       padding: 1px 0px 0px 0px;
       &:hover{
         cursor: pointer;
+      }
+    }
+    .ajax-progress{
+      position: absolute;
+      //top: 10px;
+      //left: -6px;
+      bottom: 20px;
+      right: 20px;
+      .throbber {
+        background: transparent url('../image/loader-ajax-blue2.gif') no-repeat 0px 0px; /* tweak this according to your gif */
+        float: left;
+        height: 16px; /* tweak this according to your gif */
+        width: 16px; /* tweak this according to your gif */
+        margin: 0px;
       }
     }
   }
