--- a/sass/_calc-result.scss
+++ b/sass/_calc-result.scss
@@ -26,6 +26,8 @@
     font-family: $bold;
     font-size: 26px;
     color: #3498db;
+    display: inline-block;
+    width: 60px;
   }
   &_curr{
     font-size: 16px;
