all forms but calc

--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -1267,6 +1267,8 @@ textarea:focus {
 }
 .form-popup_confirmation {
   padding: 0px 22px 0px 22px;
+}
+.form-popup_confirmation p {
   text-align: center;
 }
 .form-popup_inner {
@@ -1285,6 +1287,8 @@ textarea:focus {
   border: 1px solid #ff0000;
 }
 .form-popup_inner textarea {
+  box-sizing: content-box;
+  display: inline;
   font-size: 16px;
   width: 199px;
   height: 77px;
@@ -1296,6 +1300,8 @@ textarea:focus {
   padding: 9px 0px 0px 0px;
   text-align: center;
   position: relative;
+  width: 245px;
+  margin: 0 auto;
 }
 .form-popup_button input {
   width: 245px;
@@ -1323,7 +1329,7 @@ textarea:focus {
 .form-popup_button .ajax-progress {
   position: absolute;
   top: 29px;
-  right: 25px;
+  right: 5px;
 }
 .form-popup_button .ajax-progress .throbber {
   background: transparent url("../image/loader-ajax-red.gif") no-repeat 0px 0px;
@@ -1334,14 +1340,6 @@ textarea:focus {
   width: 16px;
   /* tweak this according to your gif */
   margin: 0px;
-}
-.form-popup_descr {
-  font-family: proximanova_light;
-  color: #666666;
-  font-size: 14px;
-  text-align: center;
-  padding: 15px 20px 30px 20px;
-  line-height: 1.2;
 }
 .form-popup_descr p {
   font-family: proximanova_light;
