--- a/sass/_form-popup.scss
+++ b/sass/_form-popup.scss
@@ -52,7 +52,9 @@
   }
   &_confirmation{
     padding: 0px 22px 0px 22px;
-    text-align: center;
+    p{
+      text-align: center;
+    }
   }
   &_inner{
     padding: 0px 0px 17px 0px;
@@ -69,6 +71,8 @@
         border: 1px solid #ff0000;
       }
     textarea{
+      box-sizing: content-box;
+      display: inline;
       font-size: 16px;
       width: 199px;
       height: 77px;
@@ -81,6 +85,8 @@
     padding: 9px 0px 0px 0px;
     text-align: center;
     position: relative;
+    width: 245px;
+    margin: 0 auto;
     input{
       width: 245px;
       height: 56px;
@@ -101,7 +107,7 @@
       //top: 10px;
       //left: -6px;
       top: 29px;
-      right: 25px;
+      right: 5px;
       .throbber {
         background: transparent url('../image/loader-ajax-red.gif') no-repeat 0px 0px; /* tweak this according to your gif */
         float: left;
@@ -112,12 +118,6 @@
     }
   }
   &_descr{
-    font-family: $light;
-    color: #666666;
-    font-size: 14px;
-    text-align: center;
-    padding: 15px 20px 30px 20px;
-    line-height: 1.2;
     p{
       font-family: $light;
       color: #666666;
