--- a/sass/_main5.scss
+++ b/sass/_main5.scss
@@ -85,6 +85,7 @@
   max-width:300px;
   color:#860404;
   background-color:#ffffff;
+  min-height: 100px;
   /**
    * - If you set a background-image, border/padding/background-color will be ingnored.
    *   You can set any padding to .tip-inner instead if you need.
