--- a/sass/_main8.scss
+++ b/sass/_main8.scss
@@ -27,6 +27,8 @@
     max-width: 100%;
     display: block;
     margin: 0 auto;
+    width: 125px;
+    height: 47px;
   }
   .bx-wrapper .bx-loading {
     min-height: 50px;
