--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -1509,7 +1509,7 @@ textarea:focus {
 }
 
 #cboxLoadingGraphic {
-  background: url(../image/temp/loading.gif) no-repeat center center;
+  background: url(../image/loading.gif) no-repeat center center;
 }
 
 #cboxPrevious, #cboxNext, #cboxSlideshow, #cboxClose {
@@ -1537,7 +1537,7 @@ textarea:focus {
   top: 50%;
   left: 5px;
   margin-top: -32px;
-  background: url(../image/temp/controls.png) no-repeat top left;
+  background: url(../image/controls.png) no-repeat top left;
   width: 28px;
   height: 65px;
   text-indent: -9999px;
@@ -1552,7 +1552,7 @@ textarea:focus {
   top: 50%;
   right: 5px;
   margin-top: -32px;
-  background: url(../image/temp/controls.png) no-repeat top right;
+  background: url(../image/controls.png) no-repeat top right;
   width: 28px;
   height: 65px;
   text-indent: -9999px;
@@ -2647,6 +2647,7 @@ textarea:focus {
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
   * zoom: 1;
   display: block;
+  padding: 0px 0px 30px 0px;
 }
 .main4_wrap:after {
   clear: both;
@@ -2661,7 +2662,7 @@ textarea:focus {
   height: 1%;
 }
 .main4_item {
-  height: 146px;
+  height: 188px;
   width: 33.33%;
   float: left;
   display: inline-block;
@@ -2800,6 +2801,7 @@ textarea:focus {
   max-width: 300px;
   color: #860404;
   background-color: #ffffff;
+  min-height: 100px;
   /**
    * - If you set a background-image, border/padding/background-color will be ingnored.
    *   You can set any padding to .tip-inner instead if you need.
@@ -3023,6 +3025,8 @@ textarea:focus {
   max-width: 100%;
   display: block;
   margin: 0 auto;
+  width: 125px;
+  height: 47px;
 }
 .main8 .bx-wrapper .bx-loading {
   min-height: 50px;
@@ -4237,15 +4241,15 @@ textarea:focus {
   font-size: 30px;
   border-left: 3px solid #ffffff;
   padding-left: 19px;
-  margin: 30px 0px 0px 35px;
+  margin: 15px 0px 0px 25px;
   color: #ffffff;
 }
 .gmap_text {
-  margin: 27px 0px 0px 58px;
+  margin: 10px 0px 0px 48px;
 }
 .gmap_text p {
   margin-bottom: 7px;
-  font-size: 18px;
+  font-size: 15px;
   color: #ffffff;
 }
 
