--- a/sass/_main6.scss
+++ b/sass/_main6.scss
@@ -2,6 +2,9 @@
 	height: 319px;
 	padding: 41px 0px 0px 0px;
 	overflow: hidden;
+  &__review{
+    height: auto;
+  }
 	&_head{
     font-size: 30px;
     color: #373737;
